--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,165 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.heading{
+  color: white;
+  text-align: center;
+  padding: 2rem 1rem;
+}
+
+
+.back{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 46%, rgba(0,212,255,1) 100%);
+}
+
+body{
+ 
+  background: rgb(2,0,36);
+  
+}
+
+.full-high{
+  height: 100vh;
+}
+
+.main{
+  background-color: rgb(255, 255, 255);
+  padding: 2rem;
+  border-radius:1rem;
+  -webkit-box-shadow: 0px 0px 48px 0px rgba(0,0,0,0.1);
+-moz-box-shadow: 0px 0px 48px 0px rgba(0,0,0,0.1);
+box-shadow: 0px 0px 48px 0px rgba(0,0,0,0.1);
+}
+
+.movie-details{
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.136);
+  color: white;
+  border-radius:1rem;
+  -webkit-box-shadow: 0px 0px 48px 0px rgba(0,0,0,0.1);
+-moz-box-shadow: 0px 0px 48px 0px rgba(0,0,0,0.1);
+box-shadow: 0px 0px 48px 0px rgba(0,0,0,0.1);
+}
+
+.movie-poster{
+  width: 100%;
+}
+
+.movie-name{
+  font-size: 2rem;
+  font-weight: 400;
+  margin: 0;
+
+}
+.sub-details{
+  font-size: .9rem;
+}
+
+.censor{
+  border: 1px solid rgb(255, 255, 255);
+  padding: 0 5px;
+}
+
+p{
+  margin: 0;
+}
+.line{
+  width: .9px;
+  height: 70%;
+  background-color: rgb(209, 209, 209);
+}
+.rat-box{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.story{
+  margin-bottom: 1rem ;
+}
+
+.cast{
+  margin: .5rem 0;
+  color: rgb(255, 255, 255);
+}
+
+.title-dark{
+  font-weight: 700;
+  color: rgb(238, 238, 238);
+}
+
+.color{
+  color: rgb(255, 255, 255);
+}
+
+.ott{
+  padding: 1rem;
+}
+
+.watch-btn > a{
+  border: 1px solid rgb(255, 255, 255);
+  padding: 6px 20px;
+  border-radius: 20px;
+  color: rgb(255, 255, 255);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.watch-btn a:hover{
+  border: 1px solid rgb(255, 255, 255);
+  padding: 6px 20px;
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
+  background-color: white;
+  text-decoration: none;
+}
+
+.ott-logo{
+  border-radius: 50%;
+}
+
+.watch-box > p{
+  color: rgb(255, 255, 255);
+  margin-top: 1rem;
+}
+
+.copyRights{
+  text-align: center;
+  color: white;
+  font-size: smaller;
+  margin-top: 1rem;
+}
+.copyRights > small > a{
+  color: white;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .watch-btn > a{
+    border: 1px solid rgb(255, 255, 255);
+    font-size: smaller;
+    padding: 3px 12px;
+    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    text-decoration: none;
+  }
+  .watch-btn a:hover{
+    border: 1px solid rgb(255, 255, 255);
+    padding: 3px 12px;
+    border-radius: 20px;
+    color: rgb(0, 0, 0);
+    background-color: white;
+    text-decoration: none;
+  }
 }
