--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,10 @@ box-shadow: 0px 0px 48px 0px rgba(0,0,0,0.1);
   width: 100%;
 }
 
+.movie-poster > img{
+  border-radius: 10px;
+}
+
 .movie-name{
   font-size: 2rem;
   font-weight: 400;
